--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 ios/release/Gamedock.framework/Frameworks/GoogleMobileAds.framework/GoogleMobileAds filter=lfs diff=lfs merge=lfs -text
 ios/release/Gamedock.framework/Frameworks/FBAudienceNetwork.framework/FBAudienceNetwork filter=lfs diff=lfs merge=lfs -text
-*.unitypackage
+*.unitypackage filter=lfs diff=lfs merge=lfs -text
