--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,5 @@ ios/release/Gamedock.framework/Frameworks/GoogleMobileAds.framework/GoogleMobile
 ios/release/Gamedock.framework/Frameworks/FBAudienceNetwork.framework/FBAudienceNetwork filter=lfs diff=lfs merge=lfs -text
 ios/release/Gamedock.framework/Frameworks/AppLovinSDK.framework/AppLovinSDK filter=lfs diff=lfs merge=lfs -text
 *.unitypackage filter=lfs diff=lfs merge=lfs -text
+*.ANE filter=lfs diff=lfs merge=lfs -text
+*.ane filter=lfs diff=lfs merge=lfs -text
