--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 ios/release/Gamedock.framework/Frameworks/GoogleMobileAds.framework/GoogleMobileAds filter=lfs diff=lfs merge=lfs -text
 ios/release/Gamedock.framework/Frameworks/FBAudienceNetwork.framework/FBAudienceNetwork filter=lfs diff=lfs merge=lfs -text
 ios/release/Gamedock.framework/Frameworks/AppLovinSDK.framework/AppLovinSDK filter=lfs diff=lfs merge=lfs -text
+ios/release/Gamedock.framework/Frameworks/MyTargetSDK.framework/MyTargetSDK filter=lfs diff=lfs merge=lfs -text
 *.tgz filter=lfs diff=lfs merge=lfs -text
 *.unitypackage filter=lfs diff=lfs merge=lfs -text
